--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: black;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
                 <a class="nav-link text-white" aria-current="page" href="./products.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="./contact.html">contact Us</a>
+                <a class="nav-link active text-danger" aria-current="page" href="./contact.html">contact Us</a>
               </li> 
           </div>
         </div>
